# qgit

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.rtf  QGit4.sln  README  README.adoc  README_WIN.txt  TODO.txt  exception_manager.txt  qbs-build.sh  qgit.appdata.xml  qgit.desktop  qgit.geany  qgit.pro  qgit.qbs  qgit.sln  qgit.vcproj  qgit_inno_setup.iss  qgit_setup.iss
.github/workflows/: build.yaml
qbs/imports/QbsFunctions/: functions.js
src/: .gitignore  FileHistory.cc  FileHistory.h  ShaString.h  Src.vcproj  annotate.cpp  annotate.h  app_icon.rc  break_point.h  cache.cpp  cache.h  cocoainitializer.mm  commit.ui  commitimpl.cpp  commitimpl.h  common.cpp  common.h  common_types.h  config.h  console.ui  consoleimpl.cpp  consoleimpl.h  customaction.ui  customactionimpl.cpp  customactionimpl.h  dataloader.cpp  dataloader.h  defmac.h  domain.cpp  domain.h  exceptionmanager.cpp  exceptionmanager.h  filecontent.cpp  filecontent.h  filelist.cpp  filelist.h  fileview.cpp  fileview.h  fileview.ui  git.cpp  (+45 more)
src/resources/: COPYING-ICONS  qgit.icns
